# st

./: .clangd  .gitignore  Assignment.cpp  Assignment.h  AssignmentBuilder.cpp  AssignmentBuilder.h  CMakeLists.txt  DataStore.cpp  DataStore.h  Dtos.h  Enums.h  Exceptions.h  IdGenerator.cpp  IdGenerator.h  Notification.cpp  Notification.h  NotificationFactory.cpp  NotificationFactory.h  NotificationService.cpp  NotificationService.h  README.md  Subject.h  SystemFacade.cpp  SystemFacade.h  academic_tracker  compile_commands.json  enum.hpp  main.cpp  st
.cache/clangd/index/: CompositeTask.cpp.761EC28429926FE4.idx  CompositeTask.h.0B82CA86B884BB06.idx  GradingSystemAdapter.h.4704C9BC9A009122.idx  GradingSystemFacade.cpp.109342E15093596E.idx  Memento.h.B87453A52F30B8FA.idx  Notification.cpp.4664DE8EDB923BFC.idx  Notification.h.0C2FBA71B62FFD1E.idx  Observer.cpp.8E1CB3442391935A.idx  Observer.h.22851C380A8BFA31.idx  Registry.h.37E7ED253D436C45.idx  Subject.cpp.44690F709168644B.idx  Subject.h.3184B11EF50345A4.idx  Task.cpp.35D684EAC543154F.idx  Task.h.589CEF53FD9603A9.idx  TaskBuilder.cpp.2817EADA3F346A97.idx  TaskBuilder.h.81945D773C3A1401.idx  TaskDecorator.cpp.2B6789FC303C66DE.idx  TaskDecorator.h.AB92903F4BDC6863.idx  TaskProcess.cpp.A0FD2D01C834B764.idx  TaskProcess.h.8DBB396B571BADF7.idx  TaskState.cpp.C9D96F1501B355B0.idx  TaskState.h.782A97888FAC8FE0.idx  bindings.cpp.A5E9A4D91F9FE458.idx
build_wasm/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  compile_commands.json  unit_tests.js  unit_tests.wasm
client/: package.json  pnpm-lock.yaml
client/src/: academic_tracker.js  academic_tracker.wasm  at.ts  index.css  main.tsx  routes.tsx  types.ts
client/src/components/: CreateInternshipDialog.tsx  CreateSubjectDialog.tsx  CreateTaskDialog.tsx  InternshipInfoDialog.tsx  SubjectTasks.tsx
client/src/components/ui/: kanban.tsx
client/src/routes/: create-resume.tsx  index.tsx  resume.tsx  root.tsx  subject.tsx
include/: APICommands.h  APIDataTransferObjects.h  APIFacade.h  AsciiDocParser.h  Assignment.h  AssignmentBuilder.h  AssignmentDecorator.h  AssignmentProcess.h  AssignmentState.h  CachingHtmlProviderProxy.h  Command.h  CommandManager.h  CompositeAssignment.h  CompositeTask.h  Course.h  GradingSystemAdapter.h  HtmlProvider.h  HtmlProviderDecorator.h  Internship.h  MarkdownParser.h  Memento.h  MockExternalSystems.h  Notification.h  Observer.h  PerformanceStrategy.h  PerformanceVisitable.h  PerformanceVisitor.h  ProfilePerformanceCalculator.h  Registry.h  Resume.h  SetTaskStateCommand.h  ShortcodeExpanderDecorator.h  Subject.h  Task.h  TaskBuilder.h  TaskCommands.h  TaskDecorator.h  TaskProcess.h  TaskState.h  WebServer.h
src/: APIServer.cpp  AsciiDocParser.cpp  Assignment.cpp  AssignmentBuilder.cpp  AssignmentDecorator.cpp  AssignmentProcess.cpp  AssignmentState.cpp  CachingHtmlProviderProxy.cpp  CommandManager.cpp  CompositeAssignment.cpp  CompositeTask.cpp  Course.cpp  GradingSystemFacade.cpp  HtmlProvider.cpp  MarkdownParser.cpp  Notification.cpp  Observer.cpp  Registry.cpp  Resume.cpp  ShortcodeExpanderDecorator.cpp  Subject.cpp  Task.cpp  TaskBuilder.cpp  TaskCommands.cpp  TaskDecorator.cpp  TaskProcess.cpp  TaskState.cpp  bindings.cpp  main.cpp
tests/: adap-p-dec_tests.cpp  builder_tests.cpp  factory_method_tests.cpp  integration_tests.cpp  singleton_tests.cpp
web/: README.md  academic_tracker.js  app.js  index.html  server.py
